--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 *{
-
-      margin: 0;
-       padding: 0;
-
+    margin: 0;
+    padding: 0;
 }
 .cabecalho{
-
-     background-color: escolha uma cor;
-
-
-
-
+    background-color: escolha uma cor;
+    color: escolha uma cor;
+    font-size: tamanho de fonte em px;
+    display: flex;
+    justify-content: baseline;
 }
+.cabecalho-imagem{
+    width: 10%;
+    height: 10%;
