--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     color: black;
     font-size: 30px;
     display: flex;
-    justify-content: baseline;
+    justify-content: space-around;
     align-items: center;
 }
 .cabecalho-imagem{
